src/test/deca/codegen/invalid/arithmetic-divisionPar0intdivide.ima
2.30000e+00
Erreur de division par 0
